2011-05-13  Francis Galiegue <fgaliegue@gmail.com>
	* amandad-src/amandad.c: in recv_errfd(): two more NETWORK_BLOCK_BYTES
	  usages and a fix: g_snprintf() conforms to C99 and the C99 standard
	  states that the result string will always be nul terminated

2011-05-13  Francis Galiegue <fgaliegue@gmail.com>
	* amandad-src/amandad.c: in recv_errfd(): fix 'buf' local variable
	  handling (you should write to buf, not &buf, and when n bytes have
	  been read, you should zero byte[n], not byte[n+1])

2011-05-13  Francis Galiegue <fgaliegue@gmail.com>
	* amandad-src/amandad.c: use the NETWORK_BLOCK_BYTES constant to declare
	  the size of local variable 'buf' in recv_errfd()

2011-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Controller.pm, perl/Amanda/Taper/Protocol.pm,
	  perl/Amanda/Taper/Worker.pm: Remove uneeded '#! @PERL@' first line.

2011-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: s/Catched/Caught/

2011-05-11  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (19): get rid of custom array size calculations, use
	  GLib's G_N_ELEMENTS() instead; some minor cleanups along the way.
	  NOTE: gnulib's sources UNTOUCHED

2011-05-11  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (63): get rid of the SIZEOF() macro, replace with sizeof()
	  everywhere

2011-05-11  Francis Galiegue <fgaliegue@gmail.com>
	* device-src/device.c: further simplify device name validation; the
	  errmsg argument to validate_device_name() was not necessary anymore,
	  remove and adapt device_open() accordingly

2011-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: Trap ctrl-c while backup is running, resume by
	  sending email and log rotation.

2011-05-11  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/chunker.c: in do_chunk(): full_read() error checking was
	  done only after two calls to amclose(), which potentially sets errno;